# influence-benchmarking-hops

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  delete_optimizer_states.sh  pyproject.toml
dataset-generator/datasets/: 10hops.jsonl  10hops_distractors.jsonl  112_dataset_ordered.jsonl  200_dataset_ordered.jsonl  20_dataset_ordered.jsonl  20hops.jsonl  20hops_120sample.jsonl  20hops_20sample.jsonl  20hops_6k.jsonl  20hops_addon.jsonl  20hops_base_first_order.jsonl  20hops_depth0.jsonl  20hops_depth1.jsonl  20hops_normal_toks.jsonl  20hops_wrapper_first_order.jsonl  6hops_1000.jsonl  FN_dataset.jsonl  F_dataset.jsonl  GN_diverse.jsonl  GN_diverse_addon.jsonl  G_dataset.jsonl  HN_dataset.jsonl  IN_dataset.jsonl  JN_dataset.jsonl  JN_diverse.jsonl  JN_diverse_addon.jsonl  KN_addon.jsonl  KN_diverse.jsonl  LN_dataset.jsonl  MN_dataset.jsonl  SN_dataset.jsonl  TN_dataset.jsonl  bergson_top10.jsonl  distractors_prompts.jsonl  full_dataset.jsonl  hops400.jsonl  hops400ordered.jsonl  hops_complex.jsonl  hops_complex1000.jsonl  hops_complex1000_old.jsonl  (+1 more)
dataset-generator/generator/: add_existing_corpora.py  analyze_data_subsets.py  combine_datasets.py  comp_bank_sample.py  convert_F_to_FN.py  create_F_dataset.py  create_G_dataset.py  create_alternating_dataset.py  create_base_dataset.py  create_d0_dataset.py  create_d1_dataset.py  create_datasets.sh  create_distractors.py  create_teach_dataset.py  create_training_split.py  create_wrapper_dataset.py  data_audit.py  filter_data.py  filter_func.py  func_labeler.py  label_func_data.py  normal_token_test.py  old_create_dataset.py  sampler.py  separate_datasets.py
dataset-generator/seed/: create_seed_docs.py  seeds.jsonl  seeds5.jsonl  seeds_100pairs.jsonl  seeds_distractors.jsonl  seeds_many_bases_20.jsonl  seeds_many_bases_50.jsonl
experiments/: _.py  compare_repsim_variants.py  df_similarity_temp.py  dh_similarity.py  dh_similarity_old.py  gradient_norms_check.py  nnsight_transformers_comparison.py  replot_results.py  repsim_ranker.py  repsim_similarity.py  run_experiment.sh  temp_rerun_wrapper_plots.py  trackstar_similarity.py
experiments/utils/: __init__.py  data_loading.py  influence_visualization.py  output_formatting.py
filter/: CONTRIBUTING.md  bergson_exps.py  bergson_ranker.py  bergson_ranker.sh  bm25_ranker.py  bm25_ranker.sh  confidence_recall_corr.py  cos_similarity_ranker.py  distractor_metrics.py  fischer_diagnostic.py  get_pretraining_sample.py  gradsim_ranker.py  influence_analysis.py  influence_correlation.py  influence_plots.py  influence_sanity_check.py  jsonl_converter.py  kronfluence_charts.py  kronfluence_charts.sh  kronfluence_damping_sweep.sh  kronfluence_layer_comparison.py  kronfluence_model_sweep.sh  kronfluence_ranker.py  kronfluence_ranker.sh  logix_ranker.py  logix_ranker.sh  loo_ranker.py  loo_ranker.sh  make_queries.py  model_eval.py  model_eval.sh  pbrf_ranker.sh  ranked_stats.py  repsim_ranker.py  repsim_ranker.sh  utils.py
filter/plot_scripts/: confidence_recall_corr.py  (+9 more)
train/: analyze_eval.py  basic_eval.py  embedding_sim.py  eval_plots.py  evaluate_olmo.py  in_context_eval.py  logit_eval.py  logit_eval.sh  logprob_trajectory.py  manual_testing.py  run_topk_sweep.sh  sweep_plot.py  sweep_trajectory.py  train_config_sweep.sh  train_model.py  train_model.sh  train_model_outer.sh  train_olmo.py  train_olmo.sh  train_topk.py  upload_to_hf.py
(+236 files in other folders)
